<resources>
    <string name="app_name">PakigsaBot</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="pakigsabot">Pakigsa-Bot</string>
    <string name="tagline">Reservations without limits.</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="forgot">Forgot your Password?</string>
    <string name="firstN">First Name</string>
    <string name="lastN">Last Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="create">Create Account</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="haveaccount">Already have an account?</string>
    <string name="email_req">Email Address is REQUIRED.</string>
    <string name="pass_req">Password is REQUIRED.</string>
    <string name="pass_min">Password must have at least 8 characters</string>
    <string name="staff_uname_req">Staff Username is REQUIRED.</string>
    <string name="staff_job_req">Staff Job Title is REQUIRED.</string>
    <string name="est_name_req">Establishment Name is REQUIRED.</string>
    <string name="est_type_req">Establishment Type is REQUIRED.</string>
    <string name="phoneNum_req">Phone Number is REQUIRED.</string>
    <string name="address_req">Address is REQUIRED.</string>
    <string name="signIn_success">Sign In Success</string>
    <string name="signUp_success">Account has been created successfully!</string>
    <string name="estType">Establishment Type</string>
    <string-array name="esttype">
        <item>Restaurant</item>
        <item>Resort</item>
        <item>Dental Clinic</item>
        <item>Internet Cafe</item>
        <item>Spa and Salon</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcomeTxt">Welcome, Owner!</string>
    <string name="estName">Establishment Name</string>
    <string name="upcomingR">Upcoming Reservations</string>
    <string name="donthaversrv">There are no reservations yet</string>
    <string name="checkRsrv">Check for any pending reservations.</string>
    <string name="prof">Profile</string>
    <string name="changePass">Change Password</string>
    <string name="currentDate">December 25, 2021</string>
    <string name="address">Address</string>
    <string name="reservations">Reservations</string>
    <string name="reservationsHist">Reservation History</string>
    <string name="reservationsCalendar">Reservation Calendar</string>
    <string name="agreementTxt">"Pakigsa-Bot is a community where anyone can belong. To ensure this, we're asking you to commit to the following: Pakigsa-Bot Community Commitment - I agree to treat everyone in the Pakigsa-Bot Community regardless of their race, religion, national origin, ethnicity, skin color, disability, sex, gender identity, sexual orientation, or age - with respect, and without judgment or bias."</string>
    <string name="agreeTxt">"Select Agree to Continue"</string>
    <string name="defaultResponse">Hi, thanks for contacting us. Please send us any questions you may have. We aren\'t here at the moment, but we\'ll get back to you soon! We\'ve received your message and appreciate you reaching out. For faster communication, you have to inquire between 8AM - 6PM. You can also reach us at 032-412-3277 (Telephone) or 0922-643-6559 (Mobile) for faster transaction.</string>
    <string name="mainMenu">I also believe you might find the answer in our Home Menu. Just tap below to go to the Main Menu</string>
    <string name="defaultResponse2">Sorry I didn\'t understand you. Simple add @help to your message and we will try to answer you as soon as possible. Is there anything else I can help you with?</string>
    <string name="subscriptionTerms">The Classic membership will automatically be set and will remain for as long as you pay the monthly subscription fee. Pakigsa-Bot reserves the right to add, modify, reduce, or discontinue the membership or benefits associated with Premium membership if you have failed to Pay the Monthly Subscription fee, violated the Pakigsa-Bot Community Guidelines or at any time.
                                    You agree and acknowledge that Pakigsa-Bot has the right to immediately terminate such membership if it discovers that you have been in violation of the above paragraph at any time during your membership, and, at Pakigsa-Bot’s discretion, Pakigsa-Bot may take action against you, including, but not limited to, suspending or removing your account from the Application indefinitely.
    </string>
    <string name="removal">Your Classic Membership, and privileges may be revoked at any time if you violate these terms, the Pakigsa-Bot Terms of Service or any other Pakigsa-Bot terms and conditions applicable to you.
                            Continued participation in the membership is at Pakigsa-Bot’s sole and final discretion. The subscription fee is not refundable and will not be refunded if for anytime you wish to discontinue acquiring the Classic Subscription.
    </string>
    <string name="disclaimer">
        If you choose to use the Pakigsa-Bot Application, you do so voluntarily and at your sole risk. The Pakigsa-Bot Application, and Classic membership and any other materials or benefits, are provided “as is”, without warranty of any kind, either express or implied.
        You agree that you have had whatever opportunity you deem necessary to investigate the Pakigsa-Bot Services, laws, rules, or regulations.
        The foregoing disclaimers apply to the maximum extent permitted by law. You may have other statutory rights. However, the duration of statutorily required warranties, if any, shall be limited to the maximum extent permitted by law.
    </string>

    <string-array name="menuItemCategories">
        <item>Appetizer</item>
        <item>Soup</item>
        <item>Noodles/Rice</item>
        <item>Dish</item>
        <item>Dessert/Beverage</item>
        <item>Drink</item>
        <item>Meal</item>
        <item>Rice Meal</item>
    </string-array>
    <string-array name="menuItemAvailability">
        <item>Available</item>
        <item>Not Available</item>
    </string-array>

</resources>