<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomescreen"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="127dp"
        android:layout_height="44dp"
        android:background="@color/peach"
        android:drawableEnd="@drawable/signin"
        android:fontFamily="@font/comfortaa"
        android:paddingEnd="10dp"
        android:text="@string/signin"
        android:textColor="@color/darkbluegreen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagTxt"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="127dp"
        android:layout_height="44dp"
        android:background="@color/peach"
        android:drawableEnd="@drawable/signup"
        android:fontFamily="@font/comfortaa"
        android:paddingEnd="10dp"
        android:text="@string/signup"
        android:textColor="@color/darkbluegreen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/tagTxt"
        android:layout_width="349dp"
        android:layout_height="37dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/tagline"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pakigsaBotTxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pakigsaBotTxt"
        android:layout_width="329dp"
        android:layout_height="75dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/pakigsabot"
        android:textAlignment="center"
        android:textColor="@color/darkbluegreen"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

</androidx.constraintlayout.widget.ConstraintLayout>