<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <Button
        android:id="@+id/createAccBtn"
        android:layout_width="186dp"
        android:layout_height="41dp"
        android:background="@color/darkbluegreen"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/create"
        android:textColor="@color/lemongreen"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassEditTxt"
        app:layout_constraintVertical_bias="0.311" />

    <EditText
        android:id="@+id/passwordEditTxtSU"
        android:layout_width="299dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTxt2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/confirmPassEditTxt"
        android:layout_width="305dp"
        android:layout_height="41dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTxt3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/passTxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/confirmpass"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxtSU"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/lastNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/lastN"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditTxt"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/mobileNumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/mobile"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditTxt"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/emailTxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileEditTxt"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/passTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/pass"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddEditTxtSU"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/emailAddEditTxtSU"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="example@gmail.com"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/firstNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/firstN"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTxt"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/signup"
        android:textColor="@color/darkbluegreen"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <ImageButton
        android:id="@+id/backBtnSU"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/back_arrow" />

    <EditText
        android:id="@+id/firstNameEditTxt"
        android:layout_width="296dp"
        android:layout_height="43dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTxt"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/lastNameEditTxt"
        android:layout_width="296dp"
        android:layout_height="49dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTxt"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mobileEditTxt"
        android:layout_width="297dp"
        android:layout_height="41dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumTxt"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>