<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layoutdesign"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/homebg_business_owner"
    android:measureAllChildren="true"
    tools:context=".NavigationFragments.HomeFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileBtn"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:background="@color/darkgreen"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currentDateTxt"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/estNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:shadowColor="@color/black"
        android:shadowDx="6"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/estName"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDateTxt"
        app:layout_constraintVertical_bias="0.027" />

    <ImageButton
        android:id="@+id/signoutHomeBtn"
        android:layout_width="29dp"
        android:layout_height="59dp"
        android:layout_marginStart="5dp"
        android:background="@color/darkgreen"
        android:src="@drawable/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toEndOf="@+id/estNameTxt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <ImageButton
        android:id="@+id/noUpcomingRsrvBtn"
        android:layout_width="362dp"
        android:layout_height="194dp"
        android:background="@color/peach"
        android:src="@drawable/no_upcoming"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingReservesTxt"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/upcomingReservesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/upcomingR"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileBtn"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/donthaveRsrvTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/donthaversrv"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/noUpcomingRsrvBtn"
        app:layout_constraintEnd_toEndOf="@+id/noUpcomingRsrvBtn"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="@+id/noUpcomingRsrvBtn"
        app:layout_constraintTop_toTopOf="@+id/noUpcomingRsrvBtn"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/selectRsrvTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/checkRsrv"
        android:textColor="@color/black"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/noUpcomingRsrvBtn"
        app:layout_constraintEnd_toEndOf="@+id/noUpcomingRsrvBtn"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="@+id/noUpcomingRsrvBtn"
        app:layout_constraintTop_toBottomOf="@+id/donthaveRsrvTxt"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/currentDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/currentDate"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="16dp"
        android:layout_height="17dp"
        android:src="@drawable/active_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>